src/scss/components/_introduction.scss
.contact, 
.about, 
.introduction {
    display: flex;
    flex-direction: column;
    align-items: center;
    min-height: 200px;
    justify-content: space-around;
    z-index: -10;
    padding: $pa3 $pa3 0 $pa3;
    img {
        margin: 0;
    }
    background-blend-mode: overlay;
    background-size: cover;
}

.about, 
.contact {
    max-width: 800px;
    margin: 0 auto;
    p {
        margin: 0 0 $space6 0;
    }
}

